fix wrapping of user badge

--- a/client/src/components/miscellaneous/userBadgeItem/userbadgeitem.css
+++ b/client/src/components/miscellaneous/userBadgeItem/userbadgeitem.css
@@ -3,7 +3,6 @@
     align-items: center;
     padding: 0.5rem 1rem;
     cursor: pointer;
-    margin: 0 0.7rem;
     font-size: 1.3rem;
     gap: 1rem;
     outline: 1px solid grey;
